syntax = "proto3";
import "google/protobuf/timestamp.proto";

package ntreev.crema.services;

message SignatureDate {
    string id = 1;
    google.protobuf.Timestamp date = 2;
}

message CremaFault {
    string exceptionType = 1;
    string message = 2;
}

message ResultBase {
    string taskID = 1;
    SignatureDate signatureDate = 2;
    CremaFault fault  = 3;
}

message SubscribeReply {
    string id = 1;
}

message PollRequest {
    string id = 1;
}

message PollReply {
    string id = 1;
}
